; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/extr_soc-core.c_run_delayed_work.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/extr_soc-core.c_run_delayed_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.delayed_work = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.delayed_work*)* @run_delayed_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_delayed_work(%struct.delayed_work* %0) #0 {
  %2 = alloca %struct.delayed_work*, align 8
  %3 = alloca i32, align 4
  store %struct.delayed_work* %0, %struct.delayed_work** %2, align 8
  %4 = load %struct.delayed_work*, %struct.delayed_work** %2, align 8
  %5 = call i32 @cancel_delayed_work(%struct.delayed_work* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.delayed_work*, %struct.delayed_work** %2, align 8
  %10 = call i32 @schedule_delayed_work(%struct.delayed_work* %9, i32 0)
  %11 = call i32 (...) @flush_scheduled_work()
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @cancel_delayed_work(%struct.delayed_work*) #1

declare dso_local i32 @schedule_delayed_work(%struct.delayed_work*, i32) #1

declare dso_local i32 @flush_scheduled_work(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
